# pyqt-mvvm-example

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.ini  main.py  pyproject.toml  requirements.txt  setup.cfg
.githooks/: commit_message_check.py
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/discussions/: categories.yml
.github/workflows/: build-app.yml  cd.yml  ci.yml  quality-checks.yml  security.yml
app/: app_context.py  init.py  main_window.py  stylesheet.qss
app/core/: __init__.py  interfaces.py
app/i18n/: README.md  __init__.py  example_usage.py  language_selector.py  translation_manager.py  translation_service.py
app/i18n/translations/: en.json  pl.json
app/model/: counter_model.py
app/models/: __init__.py  counter_model.py  fuzzy_system_model.py
app/services/: __init__.py  configuration_service.py  console_logger_service.py  data_service.py  fuzzy_logic_service.py  interface  local_config_service.py  local_data_service.py  logger_service.py  theme_manager.py  theme_service.py  translate_manager.py
app/themes/: __init__.py  default_stylesheet.qss  theme_manager.py
app/utils/: config.py  i18n.py  i18n_manager.py  keys.py  paths.py  thread_manager.py  utils.py  worker.py
app/view_models/: __init__.py  base_view_model.py  counter_view_model.py  fuzzy_sets_view_model.py  fuzzy_system_view_model.py  main_view_model.py  rules_view_model.py  test_view.py  test_view_model.py  theme_view_model.py
app/views/: __init__.py  base_view.py  counter_view.py  counter_view.qss  fuzzy_sets_view.py  main_view.py  main_view.qss  system_view.py  test_view.py  theme_view.py
app/views/counter_view/: counter_view.py
app/views/main_view/: main_view.py  main_view.qss
app/views/test_view/: test_view.py
assets/locales/en/: app.json
assets/locales/pl/: app.json
assets/themes/: dark.json  white.json
commands/: setup_windows.ps1
docs/: README.md  __init__.py  isort_configuration.md  self_contained_architecture.md
docs/architecture/: mvvm_pattern.md
scripts/: README.md  __init__.py  build.py  check.py  clean.py  deploy.py  dev.py  isort_example.py  run.bat  run.py  run.sh  setup.py  utils.py
tests/: __init__.py  conftest.py  pytest.ini
tests/unit/: test_models.py  test_services.py  test_view_models.py
themes/: blue.json  dark.json  default.json
